envoy.yaml
static_resources:
    listeners:
        - name: listener_0
          address:
              socket_address: { address: 0.0.0.0, port_value: 8080 }
          filter_chains:
              - filters:
                    - name: envoy.filters.network.http_connection_manager
                      typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                          codec_type: auto
                          stat_prefix: ingress_http
                          route_config:
                              name: greeter_service
                              virtual_hosts:
                                  - name: greeter_service
                                    domains: ["*"]
                                    routes:
                                        - match: { prefix: "/" }
                                          route:
                                              cluster: greeter_service
                                              max_stream_duration:
                                                  grpc_timeout_header_max: 0s
                                    cors:
                                        allow_origin_string_match:
                                            - prefix: "*"
                                        allow_methods: GET, PUT, DELETE, POST, OPTIONS
                                        allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
                                        max_age: "1728000"
                                        expose_headers: custom-header-1,grpc-status,grpc-message
                          http_filters:
                              - name: envoy.filters.http.grpc_web
                                typed_config:
                                    "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
                              - name: envoy.filters.http.cors
                                typed_config:
                                    "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                              - name: envoy.filters.http.router
                                typed_config:
                                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
    clusters:
        - name: greeter_service
          connect_timeout: 10s
          type: logical_dns
          dns_lookup_family: V4_ONLY
          # HTTP/2 support
          typed_extension_protocol_options:
              envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
                  "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
                  explicit_http_config:
                      http2_protocol_options: {}
          lb_policy: round_robin
          load_assignment:
              cluster_name: greeter_service
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: host.docker.internal
                                      port_value: 50051
